<resources>
    <string name="app_name">Ocast</string>
    <string name="title_home">Home</string>
    <string name="title_discover">Discover</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_podcasts_and_episodes">Search podcasts and episodes</string>
    <string name="top_genres">Top genres</string>
    <string name="all_genres">All genres</string>
    <string name="browse_all">Browse all</string>
</resources>