<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="app.ocast.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_discover"
        android:name="app.ocast.ui.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover" >
        <action
            android:id="@+id/action_navigation_discover_to_genresFragment"
            app:destination="@id/genresFragment" />
        <action
            android:id="@+id/action_navigation_discover_to_podcastsFragment"
            app:destination="@id/podcastsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="app.ocast.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/genresFragment"
        android:name="app.ocast.ui.genres.GenresFragment"
        android:label="GenresFragment" >
        <action
            android:id="@+id/action_genresFragment_to_podcastsFragment"
            app:destination="@id/podcastsFragment" />
    </fragment>
    <fragment
        android:id="@+id/podcastsFragment"
        android:name="app.ocast.ui.podcasts.PodcastsFragment"
        android:label="PodcastsFragment" />
</navigation>